--- a/document/学习笔记.md
+++ b/document/学习笔记.md
@@ -182,3 +182,27 @@ setenv bootargs 'console=ttyS0,115200 panic=5 rootwait root=/dev/nfs nfsroot=192
 # ip=自己linux主机ip：ubuntu主机ip：网关：掩码（linux主机ip要和ubuntu主机ip要在同一个网段）
 ```
 
+
+
+### 查看 FB0设备是否存在
+
+```
+ls /dev/fb*
+
+#花屏代码
+cat /dev/urandom > /dev/fb0
+```
+
+
+
+
+
+### 在linux开发板上sh找不到。例如-sh: rm-rf: not found
+
+将交叉编译器arm-linux-gnueabihf/libc/lib下的所有文件复制到开发板中的/lib中，即可，
+
+```
+cp *so* /workspace/lib -rdf
+#-rdf是强制复制，包括动态链接
+```
+
