--- a/document/学习笔记.md
+++ b/document/学习笔记.md
@@ -1,3 +1,11 @@
+### 荔枝派相关网页
+
+https://wiki.sipeed.com/soft/Lichee/zh/linux/start/introduction.html
+
+http://wiki.lcmaker.com/index.php?title=LC-PI-V3S
+
+
+
 ### 在ubuntu安装复制粘贴功能
 
 ```
@@ -124,9 +132,9 @@ sudo service tftpd-hpa start
 
 # 修改tftpd-hpa文件
 sudo vim /etc/default/tftpd-hpa
-#修改为
-# /etc/default/tftpd-hpa
+#修改为以下内容
 
+# /etc/default/tftpd-hpa
 TFTP_USERNAME="tftp"
 TFTP_DIRECTORY="/home/bluebox/my_linux/licheepi/tftp"
 TFTP_ADDRESS=":69"
