--- a/document/学习笔记.md
+++ b/document/学习笔记.md
@@ -184,6 +184,7 @@ sudo /etc/init.d/nfs-kernel-server restart
 
 ```
 setenv bootargs 'console=ttyS0,115200 panic=5 rootwait root=/dev/nfs nfsroot=192.168.6.120:/home/bluebox/my_linux/licheepi/nfs rw ip=192.168.6.50:192.168.6.120:192.168.6.1:255.255.255.0'
+saveenv
 
 # 192.168.6.120为ubuntu主机的ip
 # /home/bluebox/my_linux/licheepi/nfs为ubuntu主机中存放tftp的文件
@@ -200,8 +201,6 @@ ls /dev/fb*
 #花屏代码
 cat /dev/urandom > /dev/fb0
 ```
-
-
 
 
 
