--- a/document/学习笔记.md
+++ b/document/学习笔记.md
@@ -193,6 +193,14 @@ saveenv
 
 
 
+### 根文件系统启动失败原因
+
+1. **VFS: Unable to mount root fs via NFS, trying floppy.**
+
+   在linux内核中没有配置网络驱动和nfs，需要搜索在v3s中如何配置网络驱动和nfs
+
+
+
 ### 查看 FB0设备是否存在
 
 ```
